# internal/models/requests.go
@@ -1,0 +1,11 @@
+package models
+
+type RegisterInput struct {
+	Email    string `json:"email" example:"user@example.com"`
+	Password string `json:"password" example:"password123"`
+}
+
+type LoginInput struct {
+	Email    string `json:"email" example:"user@example.com"`
+	Password string `json:"password" example:"password123"`
+}
